# wasmer.io

./: .eslintrc.json  .gitignore  .prettierignore  LICENSE  README.md  _redirects  client.js  deploy.sh  deploy.yaml  gatsby-config.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  wasmer.toml
_case_studies/: [slug].js  fluence.md
_posts/: WAI-is-the-answer.md  announcing-wasix.md  announcing-wasmer-3.0.md  announcing-wcgi.md  casestudy.css  casestudy.html  compiling-wasmer-to-webassembly.md  fluence-case-study.md  gpt-4-at-wasmer.md  happiness-for-success-embracing-failure.md  how-do-we-test-and-document-our-c-api.md  introducing-markdown-playgrounds-powered-by-wasm.md  is-not-about-wasm-is-about-what-you-can-build-with-it.md  markdown-playgrounds-powered-by-wasm.md  novel-way-to-develop--test-and-document-c-libraries-from-rust.md  pitpet-the-web3-metaverse-with-pets.md  running-wasm-in-ocaml-with-wasmer.md  testing-wai.md  the-disruptive-mindset-of-work-happiness.es.md  the-disruptive-mindset-of-work-happiness.md  wapm-revamp.md  wasm-as-universal-binary-format-part-1-native-executables.md  wasm-as-universal-binary-format-part-2-wapm.md  wasm-on-amazon-lambda-lessons-learned.md  wasmer-2.0.md  wasmer-2.1.md  wasmer-2.2  wasmer-2.2.md  wasmer-2.3.md  wasmer-3.2.md  wasmer-3.3-and-javascriptcore.md  wasmer-and-trademarks-extended.md  wasmer-and-trademarks.md  wasmer-enables-fass.md  (+12 more)
demo/wasi_runner_in_js/: Cargo.toml  index.html
demo/wasi_runner_in_js/assets/: hello.wasm
demo/wasi_runner_in_js/src/: lib.rs
(+257 files in other folders)
