[package]
name = "wasi_runner_in_js"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasmer = { git = "https://github.com/wasmerio/wasmer", branch = "master", default-features = false, features = ["js-default"] }
wasmer-wasi = { git = "https://github.com/wasmerio/wasmer", branch = "master", default-features = false, features = ["js-default"] }
wasm-bindgen = { version = "0.2" }
js-sys = { version = "0.3" }